--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -1103,5 +1103,42 @@
   "pay_with_voucher": "Pay with voucher",
   "voucher_applied": "Voucher applied",
   "you_have": "You have",
-  "available_voucher_left": "Available voucher left"
+  "available_voucher_left": "Available voucher left",
+
+  "withdraw_token": "Withdraw token",
+  "wallet_manage": "Wallet manage",
+  "history_token_data": "History token data",
+  "your_voucher": "Your voucher",
+  "hotel_voucher": "Hotel vouchers",
+  "there_are_no_voucher": "There are no vouchers available!",
+  "voucher_manage": "Voucher manage",
+  "value_of_the_voucher": "The value of the voucher is used to apply the discount",
+  "are_you_sure_want_buy_voucher": "Are you sure you want to buy this voucher?",
+  "transaction_cant_refund": "Transactions made cannot be refunded!",
+  "discount_voucher": "Discount voucher",
+  "when_paying_hotel": "When paying at the hotel",
+  "apply_all_hotel_system": "Applicable across all hotel systems",
+  "this_voucher_is_valid": "This voucher is valid until",
+  "this_voucher_not_apply_other_hotel": "This voucher does not apply to other hotels.",
+  "buy_voucher": "Buy voucher",
+  "apply_voucher": "Apply voucher",
+  "add": "Add",
+
+  "secret_phrase": "Secret phrase",
+  "usually_12_words": "Usually 12 words (sometimes 18 or 24 words) separated by spaces",
+  "is_a_string_of_letter": "is a string of letters and numbers that acts as a security code to access an account.",
+  "restore_wallet": "Restore wallet",
+  "paste": "Paste",
+
+  "this_deposit_address": "This deposit address only accepts",
+  "dont_deposit_other": "don't deposit other coins into it",
+  "add_existing_wallet": "Add existing wallet",
+  "import_existing_wallet": "Import an existing wallet",
+  "pass_phrase": "Pass phrase",
+  "use_word_mnemonic": "Use a 12-word mnemonic phrase",
+  "use_saved_private_key": "Use the saved Private key phrase",
+  "backup_file": "Backup file",
+  "use_backup_file": "Use the backup file",
+  "new_wallet_recovery_phrase": "New wallet and recovery passphrase",
+  "close": "Close"
 }
