--- a/src/languages/th.json
+++ b/src/languages/th.json
@@ -1048,5 +1048,78 @@
   "connect_with_your_friend": "เชื่อมต่อกับเพื่อนของคุณวันนี้!",
   "enter_business_name": "กรอกชื่อธุรกิจ",
   "enter_business_category": "กรอกประเภทธุรกิจ",
-  "detail_room": "รายละเอียดห้อง"
+  "detail_room": "รายละเอียดห้อง",
+
+  "show_more": "แสดงเพิ่มเติม",
+  "show_less": "แสดงน้อยลง",
+  "verified": "ยืนยันแล้ว",
+  "personal_profile": "โปรไฟล์ส่วนตัว",
+  "balance_fee_gas": "ค่าธรรมเนียมก๊าซคงเหลือ",
+  "export_wallet": "ส่งออกกระเป๋าสตางค์",
+  "delete_wallet": "ลบกระเป๋าสตางค์",
+  "account_card_management": "การจัดการบัญชี/บัตร",
+  "active_to_use_TBH": "เปิดใช้งานเพื่อใช้ TBH",
+  "direct_payment": "การชำระเงินโดยตรง",
+  "active_now": "เปิดใช้งานตอนนี้",
+  "open_now": "เปิดตอนนี้",
+  "tbh_wallet_management": "การจัดการกระเป๋าสตางค์ TBH",
+  "join_not_to_receive_voucher": "เข้าร่วมตอนนี้เพื่อรับคะแนนและรับบัตรกำนัลส่วนลดสำหรับการทำธุรกรรมครั้งถัดไปของคุณ!",
+  "create_new_wallet": "สร้างกระเป๋าสตางค์ใหม่",
+  "copy_success": "คัดลอกเรียบร้อยแล้ว",
+  "add_voucher": "เพิ่มบัตรกำนัล",
+  "date_start": "วันที่เริ่มต้น",
+  "date_end": "วันที่สิ้นสุด",
+  "list_price": "ราคาที่แสดงในรายการ",
+  "discount_price": "ราคาลด",
+  "voucher_images": "รูปภาพบัตรกำนัล",
+  "minimum_one_photos": "อัปเดตรูปภาพได้สูงสุด 1 รูป",
+  "link_policy_to_room": "เชื่อมนโยบายกับห้อง",
+  "select_at_least_one_policy": "เลือกนโยบายอย่างน้อยหนึ่งรายการเพื่อดำเนินการต่อ",
+  "invalid_date": "วันที่ไม่ถูกต้อง (ตั้งแต่ 1 ถึง 30 วัน)",
+  "this_rate_is_cheaper": "อัตรานี้ถูกกว่าราคาที่แสดงในรายการ",
+  "this_rate_is_expensive": "อัตรานี้แพงกว่าราคาที่แสดงในรายการ",
+  "listed_price_room": "ราคาที่แสดงในรายการของห้องนี้",
+  "price_after_policy": "ราคาหลังจากใช้นโยบาย",
+  "cancel_link_policy": "ยกเลิกการเชื่อมนโยบาย",
+  "enter_amount_token": "กรอกจำนวนโทเค็น",
+  "enter_amount_you_want_withdraw": "กรอกจำนวนที่คุณต้องการถอน",
+  "look_up_transaction": "ค้นหาประวัติการทำธุรกรรม",
+  "token_balance_available": "ยอดคงเหลือ TBH (สามารถถอนได้ในกระเป๋าสตางค์)",
+  "active_to_use_wallet": "เปิดใช้งานเพื่อใช้กระเป๋าสตางค์ ToBeChain",
+  "active_3_types_wallet": "เปิดใช้งานกระเป๋าสตางค์ 3 ประเภท: Saveloka, ToBeChain และเพลิดเพลินกับการชำระเงินที่รวดเร็วและปลอดภัย",
+  "congratulate_on_receiving_coin": "ขอแสดงความยินดีที่ได้รับเหรียญ TBC!",
+  "you_will_automatic_transfer": "คุณจะถูกโอนโดยอัตโนมัติ {'\n'} ไปยังหน้าจอประวัติการจองใน {'\n'}",
+  "your_transaction_has_been_canceled": "ธุรกรรมของคุณถูกยกเลิกเนื่องจาก {'\n'} ข้อผิดพลาดระหว่างกระบวนการจอง {'\n'}กรุณาลองอีกครั้ง!",
+  "traceability": "การตรวจสอบย้อนกลับ",
+  "property_traceability": "การตรวจสอบย้อนกลับทรัพย์สิน",
+  "voucher": "บัตรกำนัล",
+  "pay_with_voucher": "จ่ายด้วยบัตรกำนัล",
+  "voucher_applied": "ใช้บัตรกำนัลแล้ว",
+  "you_have": "คุณมี",
+  "available_voucher_left": "บัตรกำนัลที่เหลืออยู่",
+
+  "withdraw_token": "ถอนโทเค็น",
+  "wallet_manage": "จัดการกระเป๋าเงิน",
+  "history_token_data": "ข้อมูลประวัติโทเค็น",
+  "your_voucher": "บัตรกำนัลของคุณ",
+  "hotel_voucher": "บัตรกำนัลโรงแรม",
+  "there_are_no_voucher": "ไม่มีบัตรกำนัล!",
+  "voucher_manage": "จัดการบัตรกำนัล",
+  "value_of_the_voucher": "มูลค่าของบัตรกำนัลใช้สำหรับส่วนลด",
+  "are_you_sure_want_buy_voucher": "คุณแน่ใจหรือว่าต้องการซื้อตั๋วกำนัลนี้?",
+  "transaction_cant_refund": "การทำธุรกรรมไม่สามารถคืนเงินได้!",
+  "discount_voucher": "บัตรกำนัลส่วนลด",
+  "when_paying_hotel": "เมื่อชำระเงินที่โรงแรม",
+  "apply_all_hotel_system": "ใช้ได้กับระบบโรงแรมทั้งหมด",
+  "this_voucher_is_valid": "บัตรกำนัลนี้มีอายุถึง",
+  "this_voucher_not_apply_other_hotel": "บัตรกำนัลนี้ไม่ใช้กับโรงแรมอื่น ๆ",
+  "buy_voucher": "ซื้อตั๋วกำนัล",
+  "apply_voucher": "ใช้ตั๋วกำนัล",
+  "add": "เพิ่ม",
+
+  "secret_phrase": "วลีลับ",
+  "usually_12_words": "โดยปกติจะมี 12 คำ (บางครั้ง 18 หรือ 24 คำ) คั่นด้วยช่องว่าง",
+  "is_a_string_of_letter": "เป็นสตริงของตัวอักษรและตัวเลขที่ทำหน้าที่เป็นรหัสความปลอดภัยเพื่อเข้าถึงบัญชี",
+  "restore_wallet": "กู้คืนกระเป๋าเงิน",
+  "paste": "วาง"
 }
