--- a/src/languages/cn.json
+++ b/src/languages/cn.json
@@ -1045,5 +1045,90 @@
   "connect_with_your_friend": "今天就和你的朋友们联系吧！",
   "enter_business_name": "输入企业名称",
   "enter_business_category": "输入企业类别",
-  "detail_room": "房间详情"
+  "detail_room": "房间详情",
+
+  "show_more": "显示更多",
+  "show_less": "显示更少",
+  "verified": "已验证",
+  "personal_profile": "个人资料",
+  "balance_fee_gas": "余额费用 gas",
+  "export_wallet": "导出钱包",
+  "delete_wallet": "删除钱包",
+  "account_card_management": "账户/卡管理",
+  "active_to_use_TBH": "激活以使用TBH。",
+  "direct_payment": "直接支付",
+  "active_now": "立即激活",
+  "open_now": "立即打开",
+  "tbh_wallet_management": "TBH钱包管理",
+  "join_not_to_receive_voucher": "立即加入以赚取积分并获取您的下次交易的折扣券！",
+  "create_new_wallet": "创建新钱包",
+  "copy_success": "复制成功",
+  "add_voucher": "添加优惠券",
+  "date_start": "开始日期",
+  "date_end": "结束日期",
+  "list_price": "挂牌价",
+  "discount_price": "折扣价",
+  "voucher_images": "优惠券图片",
+  "minimum_one_photos": "最多更新1张图片",
+  "link_policy_to_room": "将政策链接到房间",
+  "select_at_least_one_policy": "选择至少一个政策以继续",
+  "invalid_date": "无效日期（1至30天）",
+  "this_rate_is_cheaper": "该费率比挂牌价便宜",
+  "this_rate_is_expensive": "该费率比挂牌价贵",
+  "listed_price_room": "该房间的挂牌价",
+  "price_after_policy": "应用政策后的价格",
+  "cancel_link_policy": "取消链接政策",
+  "enter_amount_token": "输入代币数量",
+  "enter_amount_you_want_withdraw": "输入您要提取的金额",
+  "look_up_transaction": "查询交易历史",
+  "token_balance_available": "TBH余额（可提取到钱包）",
+  "active_to_use_wallet": "激活以使用ToBeChain钱包",
+  "active_3_types_wallet": "激活三种类型的钱包：Saveloka，TobeChain，享受快速、安全的支付",
+  "congratulate_on_receiving_coin": "恭喜您收到TBC币！",
+  "you_will_automatic_transfer": "您将自动转移 {'\n'} 到预订历史记录屏幕 {'\n'}",
+  "your_transaction_has_been_canceled": "您的交易因 {'\n'} 预订过程中出错而被取消。{'\n'}请再试一次！",
+  "traceability": "可追溯性",
+  "property_traceability": "财产可追溯性",
+  "voucher": "优惠券",
+  "pay_with_voucher": "用优惠券支付",
+  "voucher_applied": "已应用优惠券",
+  "you_have": "你有",
+  "available_voucher_left": "剩余优惠券",
+
+  "withdraw_token": "提取令牌",
+  "wallet_manage": "钱包管理",
+  "history_token_data": "令牌历史数据",
+  "your_voucher": "您的优惠券",
+  "hotel_voucher": "酒店优惠券",
+  "there_are_no_voucher": "没有可用的优惠券!",
+  "voucher_manage": "优惠券管理",
+  "value_of_the_voucher": "优惠券的价值用于折扣",
+  "are_you_sure_want_buy_voucher": "您确定要购买此优惠券吗?",
+  "transaction_cant_refund": "已进行的交易不能退款!",
+  "discount_voucher": "折扣优惠券",
+  "when_paying_hotel": "在酒店付款时",
+  "apply_all_hotel_system": "适用于所有酒店系统",
+  "this_voucher_is_valid": "此优惠券有效期至",
+  "this_voucher_not_apply_other_hotel": "此优惠券不适用于其他酒店。",
+  "buy_voucher": "购买优惠券",
+  "apply_voucher": "应用优惠券",
+  "add": "添加",
+
+  "secret_phrase": "秘密短语",
+  "usually_12_words": "通常为12个单词（有时为18或24个单词），以空格分隔",
+  "is_a_string_of_letter": "是一串字母和数字，用作访问账户的安全代码。",
+  "restore_wallet": "恢复钱包",
+  "paste": "粘贴",
+
+  "this_deposit_address": "此存款地址只接受",
+  "dont_deposit_other": "不要将其他币种存入此地址",
+  "add_existing_wallet": "添加现有钱包",
+  "import_existing_wallet": "导入现有钱包",
+  "pass_phrase": "通行短语",
+  "use_word_mnemonic": "使用12个单词的助记短语",
+  "use_saved_private_key": "使用已保存的私钥短语",
+  "backup_file": "备份文件",
+  "use_backup_file": "使用备份文件",
+  "new_wallet_recovery_phrase": "新钱包和恢复短语",
+  "close": "关闭"
 }
