--- a/src/languages/id.json
+++ b/src/languages/id.json
@@ -1021,5 +1021,90 @@
   "connect_with_your_friend": "Hubungkan dengan teman-teman Anda hari ini!",
   "enter_business_name": "Masukkan nama bisnis",
   "enter_business_category": "Masukkan kategori bisnis",
-  "detail_room": "Detail ruangan"
+  "detail_room": "Detail ruangan",
+
+  "show_more": "Tampilkan lebih banyak",
+  "show_less": "Tampilkan lebih sedikit",
+  "verified": "Terverifikasi",
+  "personal_profile": "Profil pribadi",
+  "balance_fee_gas": "Saldo biaya gas",
+  "export_wallet": "Ekspor dompet",
+  "delete_wallet": "Hapus dompet",
+  "account_card_management": "Manajemen Akun/Kartu",
+  "active_to_use_TBH": "Aktifkan untuk menggunakan TBH.",
+  "direct_payment": "Pembayaran langsung",
+  "active_now": "Aktif sekarang",
+  "open_now": "Buka sekarang",
+  "tbh_wallet_management": "Manajemen Dompet TBH",
+  "join_not_to_receive_voucher": "Bergabung sekarang untuk mendapatkan poin dan menerima voucher diskon untuk transaksi berikutnya!",
+  "create_new_wallet": "Buat Dompet Baru",
+  "copy_success": "Berhasil Disalin",
+  "add_voucher": "Tambahkan voucher",
+  "date_start": "Tanggal mulai",
+  "date_end": "Tanggal berakhir",
+  "list_price": "Harga yang terdaftar",
+  "discount_price": "Harga diskon",
+  "voucher_images": "Gambar voucher",
+  "minimum_one_photos": "Perbarui hingga 1 gambar",
+  "link_policy_to_room": "Tautkan kebijakan ke kamar",
+  "select_at_least_one_policy": "Pilih setidaknya satu kebijakan untuk melanjutkan",
+  "invalid_date": "tanggal tidak valid (dari 1 hingga 30 hari)",
+  "this_rate_is_cheaper": "Tarif ini lebih murah dari harga yang terdaftar",
+  "this_rate_is_expensive": "Tarif ini lebih mahal dari harga yang terdaftar",
+  "listed_price_room": "Harga terdaftar dari kamar ini",
+  "price_after_policy": "Harga setelah menerapkan kebijakan",
+  "cancel_link_policy": "Batalkan tautan kebijakan",
+  "enter_amount_token": "Masukkan jumlah token",
+  "enter_amount_you_want_withdraw": "Masukkan jumlah yang ingin Anda tarik",
+  "look_up_transaction": "Cari riwayat transaksi",
+  "token_balance_available": "Saldo TBH (tersedia untuk ditarik ke dompet)",
+  "active_to_use_wallet": "Aktifkan untuk menggunakan Dompet ToBeChain",
+  "active_3_types_wallet": "Aktifkan 3 jenis dompet: Saveloka, ToBeChain dan nikmati pembayaran yang cepat dan aman",
+  "congratulate_on_receiving_coin": "Selamat menerima koin TBC!",
+  "you_will_automatic_transfer": "Anda akan otomatis dipindahkan {'\n'} ke layar riwayat pemesanan dalam {'\n'}",
+  "your_transaction_has_been_canceled": "Transaksi Anda telah dibatalkan karena {'\n'} kesalahan selama proses pemesanan. {'\n'}Silakan coba lagi!",
+  "traceability": "Pelacakan",
+  "property_traceability": "Pelacakan properti",
+  "voucher": "Voucher",
+  "pay_with_voucher": "Bayar dengan voucher",
+  "voucher_applied": "Voucher diterapkan",
+  "you_have": "Anda memiliki",
+  "available_voucher_left": "Voucher tersedia tersisa",
+
+  "withdraw_token": "Tarik token",
+  "wallet_manage": "Kelola dompet",
+  "history_token_data": "Data riwayat token",
+  "your_voucher": "Voucher Anda",
+  "hotel_voucher": "Voucher hotel",
+  "there_are_no_voucher": "Tidak ada voucher yang tersedia!",
+  "voucher_manage": "Kelola voucher",
+  "value_of_the_voucher": "Nilai voucher digunakan untuk menerapkan diskon",
+  "are_you_sure_want_buy_voucher": "Apakah Anda yakin ingin membeli voucher ini?",
+  "transaction_cant_refund": "Transaksi yang dilakukan tidak dapat dikembalikan!",
+  "discount_voucher": "Voucher diskon",
+  "when_paying_hotel": "Saat membayar di hotel",
+  "apply_all_hotel_system": "Berlaku di semua sistem hotel",
+  "this_voucher_is_valid": "Voucher ini berlaku hingga",
+  "this_voucher_not_apply_other_hotel": "Voucher ini tidak berlaku untuk hotel lain.",
+  "buy_voucher": "Beli voucher",
+  "apply_voucher": "Terapkan voucher",
+  "add": "Tambah",
+
+  "secret_phrase": "Frasa rahasia",
+  "usually_12_words": "Biasanya 12 kata (kadang-kadang 18 atau 24 kata) dipisahkan oleh spasi",
+  "is_a_string_of_letter": "adalah rangkaian huruf dan angka yang berfungsi sebagai kode keamanan untuk mengakses akun.",
+  "restore_wallet": "Pulihkan dompet",
+  "paste": "Tempel",
+
+  "this_deposit_address": "Alamat deposit ini hanya menerima",
+  "dont_deposit_other": "jangan deposit koin lain ke sini",
+  "add_existing_wallet": "Tambah dompet yang ada",
+  "import_existing_wallet": "Impor dompet yang ada",
+  "pass_phrase": "Frasa sandi",
+  "use_word_mnemonic": "Gunakan frasa mnemonik 12 kata",
+  "use_saved_private_key": "Gunakan frasa Private key yang disimpan",
+  "backup_file": "File cadangan",
+  "use_backup_file": "Gunakan file cadangan",
+  "new_wallet_recovery_phrase": "Dompet baru dan frasa pemulihan",
+  "close": "Tutup"
 }
