--- a/src/languages/my.json
+++ b/src/languages/my.json
@@ -1025,5 +1025,90 @@
   "connect_with_your_friend": "Sambung dengan rakan-rakan anda hari ini!",
   "enter_business_name": "Masukkan nama perniagaan",
   "enter_business_category": "Masukkan kategori perniagaan",
-  "detail_room": "Butiran bilik"
+  "detail_room": "Butiran bilik",
+
+  "show_more": "Tunjukkan lebih banyak",
+  "show_less": "Tunjukkan kurang",
+  "verified": "Disahkan",
+  "personal_profile": "Profil peribadi",
+  "balance_fee_gas": "Baki yuran gas",
+  "export_wallet": "Eksport dompet",
+  "delete_wallet": "Padam dompet",
+  "account_card_management": "Pengurusan Akaun/Kad",
+  "active_to_use_TBH": "Aktifkan untuk menggunakan TBH.",
+  "direct_payment": "Bayaran terus",
+  "active_now": "Aktifkan sekarang",
+  "open_now": "Buka sekarang",
+  "tbh_wallet_management": "Pengurusan Dompet TBH",
+  "join_not_to_receive_voucher": "Sertai sekarang untuk mendapatkan mata dan menerima baucar diskaun untuk transaksi seterusnya!",
+  "create_new_wallet": "Buat Dompet Baru",
+  "copy_success": "Disalin dengan berjaya",
+  "add_voucher": "Tambah baucar",
+  "date_start": "Tarikh mula",
+  "date_end": "Tarikh tamat",
+  "list_price": "Harga disenaraikan",
+  "discount_price": "Harga diskaun",
+  "voucher_images": "Imej baucar",
+  "minimum_one_photos": "Kemas kini sehingga 1 imej",
+  "link_policy_to_room": "Pautkan polisi ke bilik",
+  "select_at_least_one_policy": "Pilih sekurang-kurangnya satu polisi untuk meneruskan",
+  "invalid_date": "tarikh tidak sah (dari 1 hingga 30 hari)",
+  "this_rate_is_cheaper": "Kadar ini lebih murah daripada harga yang disenaraikan",
+  "this_rate_is_expensive": "Kadar ini lebih mahal daripada harga yang disenaraikan",
+  "listed_price_room": "Harga bilik yang disenaraikan",
+  "price_after_policy": "Harga selepas memohon polisi",
+  "cancel_link_policy": "Batalkan pautan polisi",
+  "enter_amount_token": "Masukkan jumlah token",
+  "enter_amount_you_want_withdraw": "Masukkan jumlah yang ingin dikeluarkan",
+  "look_up_transaction": "Cari sejarah transaksi",
+  "token_balance_available": "Baki TBH (tersedia untuk dikeluarkan ke dompet)",
+  "active_to_use_wallet": "Aktifkan untuk menggunakan Dompet ToBeChain",
+  "active_3_types_wallet": "Aktifkan 3 jenis dompet: Saveloka, ToBeChain dan nikmati pembayaran yang pantas dan selamat",
+  "congratulate_on_receiving_coin": "Tahniah atas penerimaan syiling TBC!",
+  "you_will_automatic_transfer": "Anda akan dipindahkan secara automatik {'\n'} ke skrin sejarah tempahan dalam {'\n'}",
+  "your_transaction_has_been_canceled": "Transaksi anda telah dibatalkan kerana {'\n'} ralat semasa proses tempahan. {'\n'}Sila cuba lagi!",
+  "traceability": "Kebolehkesanan",
+  "property_traceability": "Kebolehkesanan hartanah",
+  "voucher": "Baucar",
+  "pay_with_voucher": "Bayar dengan baucar",
+  "voucher_applied": "Baucar digunakan",
+  "you_have": "Anda mempunyai",
+  "available_voucher_left": "Baki baucar yang tersedia",
+
+  "withdraw_token": "Keluarkan token",
+  "wallet_manage": "Urus dompet",
+  "history_token_data": "Data sejarah token",
+  "your_voucher": "Voucher anda",
+  "hotel_voucher": "Voucher hotel",
+  "there_are_no_voucher": "Tiada voucher yang tersedia!",
+  "voucher_manage": "Urus voucher",
+  "value_of_the_voucher": "Nilai voucher digunakan untuk diskaun",
+  "are_you_sure_want_buy_voucher": "Adakah anda pasti mahu membeli voucher ini?",
+  "transaction_cant_refund": "Transaksi yang dilakukan tidak boleh dikembalikan!",
+  "discount_voucher": "Voucher diskaun",
+  "when_paying_hotel": "Apabila membayar di hotel",
+  "apply_all_hotel_system": "Terpakai di semua sistem hotel",
+  "this_voucher_is_valid": "Voucher ini sah sehingga",
+  "this_voucher_not_apply_other_hotel": "Voucher ini tidak terpakai untuk hotel lain.",
+  "buy_voucher": "Beli voucher",
+  "apply_voucher": "Guna voucher",
+  "add": "Tambah",
+
+  "secret_phrase": "Frasa rahsia",
+  "usually_12_words": "Biasanya 12 perkataan (kadang-kadang 18 atau 24 perkataan) dipisahkan oleh ruang",
+  "is_a_string_of_letter": "adalah rentetan huruf dan angka yang bertindak sebagai kod keselamatan untuk mengakses akaun.",
+  "restore_wallet": "Pulihkan dompet",
+  "paste": "Tampal",
+
+  "this_deposit_address": "Alamat deposit ini hanya menerima",
+  "dont_deposit_other": "jangan deposit coin lain ke sini",
+  "add_existing_wallet": "Tambah dompet sedia ada",
+  "import_existing_wallet": "Import dompet sedia ada",
+  "pass_phrase": "Frasa laluan",
+  "use_word_mnemonic": "Gunakan frasa mnemonik 12 perkataan",
+  "use_saved_private_key": "Gunakan frasa Private key yang disimpan",
+  "backup_file": "Fail sandaran",
+  "use_backup_file": "Gunakan fail sandaran",
+  "new_wallet_recovery_phrase": "Dompet baru dan frasa pemulihan",
+  "close": "Tutup"
 }
