--- a/src/languages/ph.json
+++ b/src/languages/ph.json
@@ -1043,5 +1043,90 @@
   "connect_with_your_friend": "Makipag-ugnayan sa iyong mga kaibigan ngayon!",
   "enter_business_name": "Ilagay ang pangalan ng negosyo",
   "enter_business_category": "Ilagay ang kategorya ng negosyo",
-  "detail_room": "Detalye ng kwarto"
+  "detail_room": "Detalye ng kwarto",
+
+  "show_more": "Ipakita ang higit pa",
+  "show_less": "Ipakita ang mas kaunti",
+  "verified": "Napatunayan",
+  "personal_profile": "Personal na profile",
+  "balance_fee_gas": "Balanse ng bayad sa gas",
+  "export_wallet": "I-export ang pitaka",
+  "delete_wallet": "Tanggalin ang pitaka",
+  "account_card_management": "Pamamahala ng Account/Kard",
+  "active_to_use_TBH": "I-activate upang magamit ang TBH.",
+  "direct_payment": "Direktang Pagbabayad",
+  "active_now": "Aktibo na",
+  "open_now": "Buksan na",
+  "tbh_wallet_management": "Pamamahala ng TBH Wallet",
+  "join_not_to_receive_voucher": "Sumali ngayon upang kumita ng mga puntos at makatanggap ng mga diskwento voucher para sa iyong susunod na transaksyon!",
+  "create_new_wallet": "Gumawa ng Bagong Pitaka",
+  "copy_success": "Matagumpay na Nakopya",
+  "add_voucher": "Magdagdag ng voucher",
+  "date_start": "Petsa ng simula",
+  "date_end": "Petsa ng pagtatapos",
+  "list_price": "Nakatalang presyo",
+  "discount_price": "Presyong may diskwento",
+  "voucher_images": "Mga larawan ng voucher",
+  "minimum_one_photos": "Mag-update ng hanggang 1 larawan",
+  "link_policy_to_room": "I-link ang patakaran sa kwarto",
+  "select_at_least_one_policy": "Pumili ng kahit isang patakaran upang magpatuloy",
+  "invalid_date": "hindi tamang petsa (mula 1 hanggang 30 araw)",
+  "this_rate_is_cheaper": "Ang rate na ito ay mas mura kaysa sa nakalistang presyo",
+  "this_rate_is_expensive": "Ang rate na ito ay mas mahal kaysa sa nakalistang presyo",
+  "listed_price_room": "Nakatalang presyo ng kwartong ito",
+  "price_after_policy": "Presyo pagkatapos ng paglalapat ng patakaran",
+  "cancel_link_policy": "Kanselahin ang pag-link ng patakaran",
+  "enter_amount_token": "Ilagay ang halaga ng token",
+  "enter_amount_you_want_withdraw": "Ilagay ang halaga na nais mong i-withdraw",
+  "look_up_transaction": "Hanapin ang kasaysayan ng transaksyon",
+  "token_balance_available": "Balanse ng TBH (magagamit upang i-withdraw sa pitaka)",
+  "active_to_use_wallet": "I-activate upang magamit ang ToBeChain Wallet",
+  "active_3_types_wallet": "I-activate ang 3 uri ng mga pitaka: Saveloka, ToBeChain at tamasahin ang mabilis, ligtas na mga pagbabayad",
+  "congratulate_on_receiving_coin": "Binabati kita sa pagtanggap ng TBC coin!",
+  "you_will_automatic_transfer": "Ikaw ay awtomatikong ililipat {'\n'} sa screen ng kasaysayan ng booking sa {'\n'}",
+  "your_transaction_has_been_canceled": "Ang iyong transaksyon ay nakansela dahil sa {'\n'} isang error sa panahon ng proseso ng pag-book. {'\n'}Mangyaring subukan muli!",
+  "traceability": "Pagsubaybay",
+  "property_traceability": "Pagsubaybay ng ari-arian",
+  "voucher": "Voucher",
+  "pay_with_voucher": "Magbayad gamit ang voucher",
+  "voucher_applied": "Ang voucher ay inilapat",
+  "you_have": "Mayroon kang",
+  "available_voucher_left": "Natitirang magagamit na voucher",
+
+  "withdraw_token": "I-withdraw ang token",
+  "wallet_manage": "Pamamahala ng wallet",
+  "history_token_data": "Kasaysayan ng datos ng token",
+  "your_voucher": "Ang iyong voucher",
+  "hotel_voucher": "Mga voucher ng hotel",
+  "there_are_no_voucher": "Walang magagamit na voucher!",
+  "voucher_manage": "Pamamahala ng voucher",
+  "value_of_the_voucher": "Ang halaga ng voucher ay ginagamit para mag-apply ng diskwento",
+  "are_you_sure_want_buy_voucher": "Sigurado ka bang gusto mong bilhin ang voucher na ito?",
+  "transaction_cant_refund": "Ang mga transaksyon na ginawa ay hindi maaaring i-refund!",
+  "discount_voucher": "Discount voucher",
+  "when_paying_hotel": "Kapag nagbabayad sa hotel",
+  "apply_all_hotel_system": "Magagamit sa lahat ng sistema ng hotel",
+  "this_voucher_is_valid": "Ang voucher na ito ay balido hanggang",
+  "this_voucher_not_apply_other_hotel": "Ang voucher na ito ay hindi magagamit sa ibang mga hotel.",
+  "buy_voucher": "Bumili ng voucher",
+  "apply_voucher": "I-apply ang voucher",
+  "add": "Magdagdag",
+
+  "secret_phrase": "Lihim na parirala",
+  "usually_12_words": "Karaniwan ay 12 salita (minsan 18 o 24 na salita) na pinaghihiwalay ng mga espasyo",
+  "is_a_string_of_letter": "ay isang string ng mga titik at numero na gumaganap bilang isang security code upang ma-access ang isang account.",
+  "restore_wallet": "Ibalik ang wallet",
+  "paste": "I-paste",
+
+  "this_deposit_address": "Ang address na ito para sa deposito ay tumatanggap lamang ng",
+  "dont_deposit_other": "huwag magdeposito ng ibang mga coin dito",
+  "add_existing_wallet": "Magdagdag ng umiiral na wallet",
+  "import_existing_wallet": "I-import ang umiiral na wallet",
+  "pass_phrase": "Pass phrase",
+  "use_word_mnemonic": "Gamitin ang 12-word mnemonic phrase",
+  "use_saved_private_key": "Gamitin ang nai-save na Private key phrase",
+  "backup_file": "Backup file",
+  "use_backup_file": "Gamitin ang backup file",
+  "new_wallet_recovery_phrase": "Bagong wallet at recovery passphrase",
+  "close": "Isara"
 }
