--- a/src/languages/vi.json
+++ b/src/languages/vi.json
@@ -1050,5 +1050,90 @@
   "connect_with_your_friend": "Kết nối với bạn bè của bạn ngay hôm nay!",
   "enter_business_name": "Nhập tên doanh nghiệp",
   "enter_business_category": "Nhập loại hình doanh nghiệp",
-  "detail_room": "Chi tiết phòng"
+  "detail_room": "Chi tiết phòng",
+
+  "show_more": "Hiển thị thêm",
+  "show_less": "Hiển thị ít hơn",
+  "verified": "Đã xác minh",
+  "personal_profile": "Hồ sơ cá nhân",
+  "balance_fee_gas": "Phí cân bằng gas",
+  "export_wallet": "Xuất ví",
+  "delete_wallet": "Xóa ví",
+  "account_card_management": "Quản lý Tài khoản/Thẻ",
+  "active_to_use_TBH": "Kích hoạt để sử dụng TBH.",
+  "direct_payment": "Thanh toán trực tiếp",
+  "active_now": "Kích hoạt ngay",
+  "open_now": "Mở ngay",
+  "tbh_wallet_management": "Quản lý Ví TBH",
+  "join_not_to_receive_voucher": "Tham gia ngay để kiếm điểm và nhận phiếu giảm giá cho giao dịch tiếp theo của bạn!",
+  "create_new_wallet": "Tạo Ví Mới",
+  "copy_success": "Sao chép thành công",
+  "add_voucher": "Thêm phiếu giảm giá",
+  "date_start": "Ngày bắt đầu",
+  "date_end": "Ngày kết thúc",
+  "list_price": "Giá niêm yết",
+  "discount_price": "Giá giảm",
+  "voucher_images": "Hình ảnh phiếu giảm giá",
+  "minimum_one_photos": "Cập nhật tối đa 1 hình ảnh",
+  "link_policy_to_room": "Liên kết chính sách với phòng",
+  "select_at_least_one_policy": "Chọn ít nhất một chính sách để tiếp tục",
+  "invalid_date": "ngày không hợp lệ (từ 1 đến 30 ngày)",
+  "this_rate_is_cheaper": "Tỷ lệ này rẻ hơn giá niêm yết",
+  "this_rate_is_expensive": "Tỷ lệ này đắt hơn giá niêm yết",
+  "listed_price_room": "Giá niêm yết của phòng này",
+  "price_after_policy": "Giá sau khi áp dụng chính sách",
+  "cancel_link_policy": "Hủy liên kết chính sách",
+  "enter_amount_token": "Nhập số lượng token",
+  "enter_amount_you_want_withdraw": "Nhập số tiền bạn muốn rút",
+  "look_up_transaction": "Tra cứu lịch sử giao dịch",
+  "token_balance_available": "Số dư TBH (có sẵn để rút vào ví)",
+  "active_to_use_wallet": "Kích hoạt để sử dụng Ví ToBeChain",
+  "active_3_types_wallet": "Kích hoạt 3 loại ví: Saveloka, TobeChain và tận hưởng thanh toán nhanh chóng, an toàn",
+  "congratulate_on_receiving_coin": "Chúc mừng bạn đã nhận được TBC coin!",
+  "you_will_automatic_transfer": "Bạn sẽ tự động chuyển {'\n'} vào màn hình lịch sử đặt phòng trong {'\n'}",
+  "your_transaction_has_been_canceled": "Giao dịch của bạn đã bị hủy do {'\n'} lỗi trong quá trình đặt phòng.{'\n'}Vui lòng thử lại!",
+  "traceability": "Truy xuất nguồn gốc",
+  "property_traceability": "Truy xuất nguồn gốc tài sản",
+  "voucher": "Phiếu giảm giá",
+  "pay_with_voucher": "Thanh toán bằng phiếu giảm giá",
+  "voucher_applied": "Phiếu giảm giá đã được áp dụng",
+  "you_have": "Bạn có",
+  "available_voucher_left": "Phiếu giảm giá còn lại",
+
+  "withdraw_token": "Rút token",
+  "wallet_manage": "Quản lý ví",
+  "history_token_data": "Lịch sử dữ liệu token",
+  "your_voucher": "Voucher của bạn",
+  "hotel_voucher": "Voucher khách sạn",
+  "there_are_no_voucher": "Không có voucher nào!",
+  "voucher_manage": "Quản lý voucher",
+  "value_of_the_voucher": "Giá trị của voucher được sử dụng để áp dụng giảm giá",
+  "are_you_sure_want_buy_voucher": "Bạn có chắc chắn muốn mua voucher này?",
+  "transaction_cant_refund": "Giao dịch đã thực hiện không thể hoàn lại!",
+  "discount_voucher": "Voucher giảm giá",
+  "when_paying_hotel": "Khi thanh toán tại khách sạn",
+  "apply_all_hotel_system": "Áp dụng trên tất cả hệ thống khách sạn",
+  "this_voucher_is_valid": "Voucher này có hiệu lực đến",
+  "this_voucher_not_apply_other_hotel": "Voucher này không áp dụng cho các khách sạn khác.",
+  "buy_voucher": "Mua voucher",
+  "apply_voucher": "Áp dụng voucher",
+  "add": "Thêm",
+
+  "secret_phrase": "Cụm từ bí mật",
+  "usually_12_words": "Thường là 12 từ (đôi khi là 18 hoặc 24 từ) được ngăn cách bằng dấu cách",
+  "is_a_string_of_letter": "là một chuỗi các chữ cái và số hoạt động như một mã bảo mật để truy cập tài khoản.",
+  "restore_wallet": "Khôi phục ví",
+  "paste": "Dán",
+
+  "this_deposit_address": "Địa chỉ gửi tiền này chỉ chấp nhận",
+  "dont_deposit_other": "đừng gửi coin khác vào đây",
+  "add_existing_wallet": "Thêm ví hiện có",
+  "import_existing_wallet": "Nhập ví hiện có",
+  "pass_phrase": "Cụm từ bảo mật",
+  "use_word_mnemonic": "Sử dụng cụm từ ghi nhớ 12 từ",
+  "use_saved_private_key": "Sử dụng cụm từ Private key đã lưu",
+  "backup_file": "File đã sao lưu",
+  "use_backup_file": "Sử dụng File đã sao lưu",
+  "new_wallet_recovery_phrase": "Ví mới và cụm từ khôi phục",
+  "close": "Đóng"
 }
