--- a/src/languages/vi.json
+++ b/src/languages/vi.json
@@ -416,7 +416,7 @@
   "view_room": "Xem phòng",
   "review": "Đánh giá",
   "domestic_tour": "Du lịch trong nước",
-  "my_identify_address": "Địa chỉ nhận dạng của tôi",
+  "my_wallet_address": "Địa chỉ ví của tôi",
   "select_country": "Chọn quốc gia",
   "please_select_country": "Vui lòng chọn quốc gia và ngôn ngữ để tiếp tục",
   "please_choose_one": "Vui lòng chọn một trong các phương thức thanh toán dưới đây",
@@ -1083,12 +1083,12 @@
   "listed_price_room": "Giá niêm yết của phòng này",
   "price_after_policy": "Giá sau khi áp dụng chính sách",
   "cancel_link_policy": "Hủy liên kết chính sách",
-  "enter_amount_token": "Nhập số lượng token",
-  "enter_amount_you_want_withdraw": "Nhập số tiền bạn muốn rút",
+  "enter_amount_token": "Nhập số lượng",
+  "enter_amount_you_want_withdraw": "Nhập số lượng bạn muốn rút",
   "look_up_transaction": "Tra cứu lịch sử giao dịch",
   "token_balance_available": "Số dư TBH (có sẵn để rút vào ví)",
   "active_to_use_wallet": "Kích hoạt để sử dụng Ví ToBeChain",
-  "active_3_types_wallet": "Kích hoạt 3 loại ví: Saveloka, TobeChain và tận hưởng thanh toán nhanh chóng, an toàn",
+  "active_2_types_wallet": "Kích hoạt 2 loại ví: SavePay, ví tiền mã hoá và tận hưởng thanh toán nhanh chóng, an toàn",
   "congratulate_on_receiving_coin": "Chúc mừng bạn đã nhận được TBC coin!",
   "you_will_automatic_transfer": "Bạn sẽ tự động chuyển {'\n'} vào màn hình lịch sử đặt phòng trong {'\n'}",
   "your_transaction_has_been_canceled": "Giao dịch của bạn đã bị hủy do {'\n'} lỗi trong quá trình đặt phòng.{'\n'}Vui lòng thử lại!",
@@ -1100,9 +1100,8 @@
   "you_have": "Bạn có",
   "available_voucher_left": "Phiếu giảm giá còn lại",
 
-  "withdraw_token": "Rút token",
-  "wallet_manage": "Quản lý ví",
-  "history_token_data": "Lịch sử dữ liệu token",
+  "withdraw_token": "Rút tiền mã hoá",
+  "manage_point_voucher": "Quản lý điểm voucher",
   "your_voucher": "Voucher của bạn",
   "hotel_voucher": "Voucher khách sạn",
   "there_are_no_voucher": "Không có voucher nào!",
@@ -1125,8 +1124,8 @@
   "restore_wallet": "Khôi phục ví",
   "paste": "Dán",
 
-  "this_deposit_address": "Địa chỉ gửi tiền này chỉ chấp nhận",
-  "dont_deposit_other": "đừng gửi coin khác vào đây",
+  "this_deposit_address": "Địa chỉ ví này chỉ chấp nhận",
+  "dont_deposit_other": "xin đừng gửi các loại khác vào đây",
   "add_existing_wallet": "Thêm ví hiện có",
   "import_existing_wallet": "Nhập ví hiện có",
   "pass_phrase": "Cụm từ bảo mật",
@@ -1135,5 +1134,19 @@
   "backup_file": "File đã sao lưu",
   "use_backup_file": "Sử dụng File đã sao lưu",
   "new_wallet_recovery_phrase": "Ví mới và cụm từ khôi phục",
-  "close": "Đóng"
+  "close": "Đóng",
+
+  "cryptocurrency_wallet": "Ví tiền mã hóa",
+  "cryptocurrency_wallet_manage": "Quản lý ví tiền mã hóa",
+  "withdraw_point_voucher": "Rút điểm voucher",
+  "history_transaction_appear_here": "Lịch sử giao dịch sẽ xuất hiện ở đây",
+  "copy": "Sao chép",
+  "deposit_fee": "Phí gửi",
+  "send": "Gửi",
+
+  "this_your_wallet_address": "Đây là địa chỉ ví của bạn",
+  "this_is_type_point": "Đây là các loại điểm sử dụng trong ứng dụng",
+  "this_is_wallet_manage": "Đây là quản lý ví điểm voucher",
+  "help_center": "Trung tâm trợ giúp",
+  "how_to_add_tobechain": "Làm thế nào để thêm TobeChain vào MetaMask?"
 }
