--- a/src/languages/cn.json
+++ b/src/languages/cn.json
@@ -413,7 +413,7 @@
   "view_room": "查看房间",
   "review": "评论",
   "domestic_tour": "国内旅游",
-  "my_identify_address": "我的身份证明地址",
+  "my_wallet_address": "我的钱包地址",
   "select_country": "选择国家",
   "please_select_country": "请选择国家和语言以继续",
   "please_choose_one": "请选择以下付款方式之一",
@@ -1078,12 +1078,12 @@
   "listed_price_room": "该房间的挂牌价",
   "price_after_policy": "应用政策后的价格",
   "cancel_link_policy": "取消链接政策",
-  "enter_amount_token": "输入代币数量",
-  "enter_amount_you_want_withdraw": "输入您要提取的金额",
+  "enter_amount_token": "输入金额",
+  "enter_amount_you_want_withdraw": "输入您想提取的金额",
   "look_up_transaction": "查询交易历史",
   "token_balance_available": "TBH余额（可提取到钱包）",
   "active_to_use_wallet": "激活以使用ToBeChain钱包",
-  "active_3_types_wallet": "激活三种类型的钱包：Saveloka，TobeChain，享受快速、安全的支付",
+  "active_2_types_wallet": "激活两种钱包：SavePay、加密货币钱包，享受快速、安全的支付",
   "congratulate_on_receiving_coin": "恭喜您收到TBC币！",
   "you_will_automatic_transfer": "您将自动转移 {'\n'} 到预订历史记录屏幕 {'\n'}",
   "your_transaction_has_been_canceled": "您的交易因 {'\n'} 预订过程中出错而被取消。{'\n'}请再试一次！",
@@ -1096,8 +1096,7 @@
   "available_voucher_left": "剩余优惠券",
 
   "withdraw_token": "提取令牌",
-  "wallet_manage": "钱包管理",
-  "history_token_data": "令牌历史数据",
+  "manage_point_voucher": "管理积分券",
   "your_voucher": "您的优惠券",
   "hotel_voucher": "酒店优惠券",
   "there_are_no_voucher": "没有可用的优惠券!",
@@ -1121,7 +1120,7 @@
   "paste": "粘贴",
 
   "this_deposit_address": "此存款地址只接受",
-  "dont_deposit_other": "不要将其他币种存入此地址",
+  "dont_deposit_other": "请不要将其他类型存入此处",
   "add_existing_wallet": "添加现有钱包",
   "import_existing_wallet": "导入现有钱包",
   "pass_phrase": "通行短语",
@@ -1130,5 +1129,20 @@
   "backup_file": "备份文件",
   "use_backup_file": "使用备份文件",
   "new_wallet_recovery_phrase": "新钱包和恢复短语",
-  "close": "关闭"
+  "close": "关闭",
+
+  "cryptocurrency_wallet": "加密货币钱包",
+  "cryptocurrency_wallet_manage": "管理加密货币钱包",
+  "withdraw_point_voucher": "提取积分券",
+  "history_transaction_appear_here": "历史交易将显示在这里",
+
+  "copy": "复制",
+  "deposit_fee": "存款费",
+  "send": "发送",
+
+  "this_your_wallet_address": "这是你的钱包地址",
+  "this_is_type_point": "这是应用中使用的积分类型",
+  "this_is_wallet_manage": "这是钱包管理代金券积分",
+  "help_center": "帮助中心",
+  "how_to_add_tobechain": "如何将TobeChain添加到MetaMask?"
 }
