--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -722,7 +722,7 @@
   "view_room": "View Room",
   "review": "Review",
   "domestic_tour": "Domestic tour",
-  "my_identify_address": "My identification address",
+  "my_wallet_address": "My wallet address",
   "select_country": "Select country",
   "please_select_country": "Please select country and language to continue",
   "please_choose_one": "Please choose one of the payment methods below",
@@ -1088,12 +1088,12 @@
   "listed_price_room": "Listed price of this room",
   "price_after_policy": "Price after applying the policy",
   "cancel_link_policy": "Cancel link policy",
-  "enter_amount_token": "Enter amount token",
+  "enter_amount_token": "Enter amount",
   "enter_amount_you_want_withdraw": "Enter amount you want to withdraw",
   "look_up_transaction": "Look up transaction history",
   "token_balance_available": "TBH balance (available to withdraw to wallet)",
   "active_to_use_wallet": "Activate to use ToBeChain Wallet",
-  "active_3_types_wallet": "Activate 3 types of wallets: Saveloka, TobeChain and enjoy fast, secure payments",
+  "active_2_types_wallet": "Activate 2 types of wallets: SavePay, cryptocurrency wallet and enjoy fast, secure payments",
   "congratulate_on_receiving_coin": "Congratulations on receiving TBC coin!",
   "you_will_automatic_transfer": "You will automatic transfer {'\n'} into booking history screen in {'\n'}",
   "your_transaction_has_been_canceled": "Your transaction has been canceled due to {'\n'} an error during the booking process.{'\n'}Please try again!",
@@ -1106,8 +1106,7 @@
   "available_voucher_left": "Available voucher left",
 
   "withdraw_token": "Withdraw token",
-  "wallet_manage": "Wallet manage",
-  "history_token_data": "History token data",
+  "manage_point_voucher": "Manage point voucher",
   "your_voucher": "Your voucher",
   "hotel_voucher": "Hotel vouchers",
   "there_are_no_voucher": "There are no vouchers available!",
@@ -1131,7 +1130,7 @@
   "paste": "Paste",
 
   "this_deposit_address": "This deposit address only accepts",
-  "dont_deposit_other": "don't deposit other coins into it",
+  "dont_deposit_other": "please do not deposit other types here.",
   "add_existing_wallet": "Add existing wallet",
   "import_existing_wallet": "Import an existing wallet",
   "pass_phrase": "Pass phrase",
@@ -1140,5 +1139,20 @@
   "backup_file": "Backup file",
   "use_backup_file": "Use the backup file",
   "new_wallet_recovery_phrase": "New wallet and recovery passphrase",
-  "close": "Close"
+  "close": "Close",
+
+  "cryptocurrency_wallet": "Cryptocurrency wallet",
+  "cryptocurrency_wallet_manage": "Cryptocurrency wallet manage",
+  "withdraw_point_voucher": "Withdraw point voucher",
+  "history_transaction_appear_here": "History transaction will appear here",
+
+  "copy": "Copy",
+  "deposit_fee": "Deposit fee",
+  "send": "Send",
+
+  "this_your_wallet_address": "This is your wallet addres",
+  "this_is_type_point": "This is types of point using in app",
+  "this_is_wallet_manage": "This is wallet manage voucher point",
+  "help_center": "Help center",
+  "how_to_add_tobechain": "How to add TobeChain to MetaMask?"
 }
