--- a/src/languages/id.json
+++ b/src/languages/id.json
@@ -411,7 +411,7 @@
   "view_room": "Lihat Kamar",
   "review": "Ulasan",
   "domestic_tour": "Tur domestik",
-  "my_identify_address": "Alamat identifikasi saya",
+  "my_wallet_address": "Alamat dompet saya",
   "select_country": "Pilih negara",
   "please_select_country": "Silakan pilih negara dan bahasa untuk melanjutkan",
   "please_choose_one": "Silakan pilih salah satu metode pembayaran di bawah ini",
@@ -1054,12 +1054,12 @@
   "listed_price_room": "Harga terdaftar dari kamar ini",
   "price_after_policy": "Harga setelah menerapkan kebijakan",
   "cancel_link_policy": "Batalkan tautan kebijakan",
-  "enter_amount_token": "Masukkan jumlah token",
+  "enter_amount_token": "Masukkan jumlah",
   "enter_amount_you_want_withdraw": "Masukkan jumlah yang ingin Anda tarik",
   "look_up_transaction": "Cari riwayat transaksi",
   "token_balance_available": "Saldo TBH (tersedia untuk ditarik ke dompet)",
   "active_to_use_wallet": "Aktifkan untuk menggunakan Dompet ToBeChain",
-  "active_3_types_wallet": "Aktifkan 3 jenis dompet: Saveloka, ToBeChain dan nikmati pembayaran yang cepat dan aman",
+  "active_2_types_wallet": "Aktifkan 2 jenis dompet: SavePay, dompet cryptocurrency, dan nikmati pembayaran yang cepat, aman",
   "congratulate_on_receiving_coin": "Selamat menerima koin TBC!",
   "you_will_automatic_transfer": "Anda akan otomatis dipindahkan {'\n'} ke layar riwayat pemesanan dalam {'\n'}",
   "your_transaction_has_been_canceled": "Transaksi Anda telah dibatalkan karena {'\n'} kesalahan selama proses pemesanan. {'\n'}Silakan coba lagi!",
@@ -1072,8 +1072,7 @@
   "available_voucher_left": "Voucher tersedia tersisa",
 
   "withdraw_token": "Tarik token",
-  "wallet_manage": "Kelola dompet",
-  "history_token_data": "Data riwayat token",
+  "manage_point_voucher": "Kelola voucher poin",
   "your_voucher": "Voucher Anda",
   "hotel_voucher": "Voucher hotel",
   "there_are_no_voucher": "Tidak ada voucher yang tersedia!",
@@ -1097,7 +1096,7 @@
   "paste": "Tempel",
 
   "this_deposit_address": "Alamat deposit ini hanya menerima",
-  "dont_deposit_other": "jangan deposit koin lain ke sini",
+  "dont_deposit_other": "mohon tidak melakukan deposit jenis lain di sini",
   "add_existing_wallet": "Tambah dompet yang ada",
   "import_existing_wallet": "Impor dompet yang ada",
   "pass_phrase": "Frasa sandi",
@@ -1106,5 +1105,19 @@
   "backup_file": "File cadangan",
   "use_backup_file": "Gunakan file cadangan",
   "new_wallet_recovery_phrase": "Dompet baru dan frasa pemulihan",
-  "close": "Tutup"
+  "close": "Tutup",
+
+  "cryptocurrency_wallet": "Dompet mata uang kripto",
+  "cryptocurrency_wallet_manage": "Kelola dompet mata uang kripto",
+  "withdraw_point_voucher": "Tarik voucher poin",
+  "history_transaction_appear_here": "Riwayat transaksi akan muncul di sini",
+
+  "copy": "Salin",
+  "deposit_fee": "Biaya deposit",
+  "send": "Kirim",
+  "this_your_wallet_address": "Ini adalah alamat dompet Anda",
+  "this_is_type_point": "Ini adalah jenis poin yang digunakan dalam aplikasi",
+  "this_is_wallet_manage": "Ini adalah manajemen dompet voucher poin",
+  "help_center": "Pusat bantuan",
+  "how_to_add_tobechain": "Bagaimana cara menambahkan TobeChain ke MetaMask?"
 }
