--- a/src/languages/my.json
+++ b/src/languages/my.json
@@ -416,7 +416,7 @@
   "view_room": "Lihat Bilik",
   "review": "Ulasan",
   "domestic_tour": "Pelancongan domestik",
-  "my_identify_address": "Alamat pengenalan saya",
+  "my_wallet_address": "Alamat dompet saya",
   "select_country": "Pilih negara",
   "please_select_country": "Sila pilih negara dan bahasa untuk meneruskan",
   "please_choose_one": "Sila pilih salah satu kaedah pembayaran di bawah",
@@ -1058,12 +1058,12 @@
   "listed_price_room": "Harga bilik yang disenaraikan",
   "price_after_policy": "Harga selepas memohon polisi",
   "cancel_link_policy": "Batalkan pautan polisi",
-  "enter_amount_token": "Masukkan jumlah token",
-  "enter_amount_you_want_withdraw": "Masukkan jumlah yang ingin dikeluarkan",
+  "enter_amount_token": "Masukkan jumlah",
+  "enter_amount_you_want_withdraw": "Masukkan jumlah yang anda mahu keluarkan",
   "look_up_transaction": "Cari sejarah transaksi",
   "token_balance_available": "Baki TBH (tersedia untuk dikeluarkan ke dompet)",
   "active_to_use_wallet": "Aktifkan untuk menggunakan Dompet ToBeChain",
-  "active_3_types_wallet": "Aktifkan 3 jenis dompet: Saveloka, ToBeChain dan nikmati pembayaran yang pantas dan selamat",
+  "active_2_types_wallet": "Aktifkan 2 jenis dompet: SavePay, dompet mata wang kripto dan nikmati pembayaran yang cepat, selamat",
   "congratulate_on_receiving_coin": "Tahniah atas penerimaan syiling TBC!",
   "you_will_automatic_transfer": "Anda akan dipindahkan secara automatik {'\n'} ke skrin sejarah tempahan dalam {'\n'}",
   "your_transaction_has_been_canceled": "Transaksi anda telah dibatalkan kerana {'\n'} ralat semasa proses tempahan. {'\n'}Sila cuba lagi!",
@@ -1076,8 +1076,7 @@
   "available_voucher_left": "Baki baucar yang tersedia",
 
   "withdraw_token": "Keluarkan token",
-  "wallet_manage": "Urus dompet",
-  "history_token_data": "Data sejarah token",
+  "manage_point_voucher": "Urus baucar mata",
   "your_voucher": "Voucher anda",
   "hotel_voucher": "Voucher hotel",
   "there_are_no_voucher": "Tiada voucher yang tersedia!",
@@ -1101,7 +1100,7 @@
   "paste": "Tampal",
 
   "this_deposit_address": "Alamat deposit ini hanya menerima",
-  "dont_deposit_other": "jangan deposit coin lain ke sini",
+  "dont_deposit_other": "jangan deposit jenis lain di sini",
   "add_existing_wallet": "Tambah dompet sedia ada",
   "import_existing_wallet": "Import dompet sedia ada",
   "pass_phrase": "Frasa laluan",
@@ -1110,5 +1109,20 @@
   "backup_file": "Fail sandaran",
   "use_backup_file": "Gunakan fail sandaran",
   "new_wallet_recovery_phrase": "Dompet baru dan frasa pemulihan",
-  "close": "Tutup"
+  "close": "Tutup",
+
+  "cryptocurrency_wallet": "Dompet mata wang kripto",
+  "cryptocurrency_wallet_manage": "Urus dompet mata wang kripto",
+  "withdraw_point_voucher": "Tarik baucer mata",
+  "history_transaction_appear_here": "Sejarah transaksi akan muncul di sini",
+
+  "copy": "Salin",
+  "deposit_fee": "Yuran deposit",
+  "send": "Hantar",
+
+  "this_your_wallet_address": "Ini adalah alamat dompet anda",
+  "this_is_type_point": "Ini adalah jenis mata yang digunakan dalam aplikasi",
+  "this_is_wallet_manage": "Ini adalah pengurusan dompet mata baucar",
+  "help_center": "Pusat bantuan",
+  "how_to_add_tobechain": "Bagaimana cara menambah TobeChain ke MetaMask?"
 }
