--- a/src/languages/th.json
+++ b/src/languages/th.json
@@ -417,7 +417,7 @@
   "view_room": "ดูห้อง",
   "review": "รีวิว",
   "domestic_tour": "ทัวร์ในประเทศ",
-  "my_identify_address": "ที่อยู่ยืนยันตัวตนของฉัน",
+  "my_wallet_address": "ที่อยู่ของกระเป๋าเงินของฉัน",
   "select_country": "เลือกประเทศ",
   "please_select_country": "กรุณาเลือกประเทศและภาษาที่ต้องการเพื่อดำเนินการต่อ",
   "please_choose_one": "กรุณาเลือกวิธีการชำระเงินด้านล่างนี้",
@@ -1081,12 +1081,12 @@
   "listed_price_room": "ราคาที่แสดงในรายการของห้องนี้",
   "price_after_policy": "ราคาหลังจากใช้นโยบาย",
   "cancel_link_policy": "ยกเลิกการเชื่อมนโยบาย",
-  "enter_amount_token": "กรอกจำนวนโทเค็น",
+  "enter_amount_token": "กรอกจำนวน",
   "enter_amount_you_want_withdraw": "กรอกจำนวนที่คุณต้องการถอน",
   "look_up_transaction": "ค้นหาประวัติการทำธุรกรรม",
   "token_balance_available": "ยอดคงเหลือ TBH (สามารถถอนได้ในกระเป๋าสตางค์)",
   "active_to_use_wallet": "เปิดใช้งานเพื่อใช้กระเป๋าสตางค์ ToBeChain",
-  "active_3_types_wallet": "เปิดใช้งานกระเป๋าสตางค์ 3 ประเภท: Saveloka, ToBeChain และเพลิดเพลินกับการชำระเงินที่รวดเร็วและปลอดภัย",
+  "active_2_types_wallet": "เปิดใช้งาน 2 ประเภทของกระเป๋าเงิน: SavePay, กระเป๋าเงินดิจิตอล และเพลิดเพลินกับการชำระเงินที่รวดเร็วและปลอดภัย",
   "congratulate_on_receiving_coin": "ขอแสดงความยินดีที่ได้รับเหรียญ TBC!",
   "you_will_automatic_transfer": "คุณจะถูกโอนโดยอัตโนมัติ {'\n'} ไปยังหน้าจอประวัติการจองใน {'\n'}",
   "your_transaction_has_been_canceled": "ธุรกรรมของคุณถูกยกเลิกเนื่องจาก {'\n'} ข้อผิดพลาดระหว่างกระบวนการจอง {'\n'}กรุณาลองอีกครั้ง!",
@@ -1099,8 +1099,7 @@
   "available_voucher_left": "บัตรกำนัลที่เหลืออยู่",
 
   "withdraw_token": "ถอนโทเค็น",
-  "wallet_manage": "จัดการกระเป๋าเงิน",
-  "history_token_data": "ข้อมูลประวัติโทเค็น",
+  "manage_point_voucher": "จัดการคูปองคะแนน",
   "your_voucher": "บัตรกำนัลของคุณ",
   "hotel_voucher": "บัตรกำนัลโรงแรม",
   "there_are_no_voucher": "ไม่มีบัตรกำนัล!",
@@ -1121,5 +1120,32 @@
   "usually_12_words": "โดยปกติจะมี 12 คำ (บางครั้ง 18 หรือ 24 คำ) คั่นด้วยช่องว่าง",
   "is_a_string_of_letter": "เป็นสตริงของตัวอักษรและตัวเลขที่ทำหน้าที่เป็นรหัสความปลอดภัยเพื่อเข้าถึงบัญชี",
   "restore_wallet": "กู้คืนกระเป๋าเงิน",
-  "paste": "วาง"
+  "paste": "วาง",
+
+  "this_deposit_address": "ที่อยู่ฝากเงินนี้รับเฉพาะ",
+  "dont_deposit_other": "โปรดอย่าฝากประเภทอื่นๆ ที่นี่",
+  "add_existing_wallet": "เพิ่มกระเป๋าเงินที่มีอยู่แล้ว",
+  "import_existing_wallet": "นำเข้ากระเป๋าเงินที่มีอยู่แล้ว",
+  "pass_phrase": "รหัสผ่าน",
+  "use_word_mnemonic": "ใช้วลี Mnemonic 12 คำ",
+  "use_saved_private_key": "ใช้วลีคีย์ส่วนตัวที่บันทึกไว้",
+  "backup_file": "ไฟล์สำรอง",
+  "use_backup_file": "ใช้ไฟล์สำรอง",
+  "new_wallet_recovery_phrase": "กระเป๋าเงินใหม่และวลีการกู้คืน",
+  "close": "ปิด",
+
+  "cryptocurrency_wallet": "กระเป๋าเงินคริปโตเคอร์เรนซี",
+  "cryptocurrency_wallet_manage": "จัดการกระเป๋าเงินคริปโตเคอร์เรนซี",
+  "withdraw_point_voucher": "ถอนคูปองคะแนน",
+  "history_transaction_appear_here": "ประวัติการทำธุรกรรมจะปรากฏที่นี่",
+
+  "copy": "คัดลอก",
+  "deposit_fee": "ค่าฝาก",
+  "send": "ส่ง",
+
+  "this_your_wallet_address": "นี่คือที่อยู่กระเป๋าเงินของคุณ",
+  "this_is_type_point": "นี่คือประเภทของคะแนนที่ใช้ในแอป",
+  "this_is_wallet_manage": "นี่คือการจัดการกระเป๋าเงินบัตรกำนัล",
+  "help_center": "ศูนย์ช่วยเหลือ",
+  "how_to_add_tobechain": "วิธีเพิ่ม TobeChain ลงใน MetaMask?"
 }
