--- a/src/languages/th.json
+++ b/src/languages/th.json
@@ -1147,5 +1147,12 @@
   "this_is_type_point": "นี่คือประเภทของคะแนนที่ใช้ในแอป",
   "this_is_wallet_manage": "นี่คือการจัดการกระเป๋าเงินบัตรกำนัล",
   "help_center": "ศูนย์ช่วยเหลือ",
-  "how_to_add_tobechain": "วิธีเพิ่ม TobeChain ลงใน MetaMask?"
+  "how_to_add_tobechain": "วิธีเพิ่ม TobeChain ลงใน MetaMask?",
+
+  "create_new_policy": "สร้างนโยบายใหม่",
+  "you_have_not_select_facility": "คุณยังไม่ได้เลือกสิ่งอำนวยความสะดวก",
+  "note_map_distance": "หมายเหตุ: กรุณามาที่ตำแหน่งที่ถูกต้องของที่ดินภายในระยะ 5 เมตร และเลือกตำแหน่งที่ถูกต้องเพื่อโพสต์ (สิ่งนี้จะช่วยระบุทรัพย์สินของคุณในระบบได้ดีขึ้น)",
+  "distance": "ระยะทาง",
+  "phone_area_code": "รหัสพื้นที่โทรศัพท์",
+  "invalid_phone": "หมายเลขโทรศัพท์ไม่ถูกต้อง"
 }
