--- a/src/languages/cn.json
+++ b/src/languages/cn.json
@@ -1085,8 +1085,8 @@
   "active_to_use_wallet": "激活以使用ToBeChain钱包",
   "active_2_types_wallet": "激活两种钱包：SavePay、加密货币钱包，享受快速、安全的支付",
   "congratulate_on_receiving_coin": "恭喜您收到TBC币！",
-  "you_will_automatic_transfer": "您将自动转移 {'\n'} 到预订历史记录屏幕 {'\n'}",
-  "your_transaction_has_been_canceled": "您的交易因 {'\n'} 预订过程中出错而被取消。{'\n'}请再试一次！",
+  "you_will_automatic_transfer": "您将自动转移 \n 到预订历史记录屏幕 \n",
+  "your_transaction_has_been_canceled": "您的交易因 \n 预订过程中出错而被取消。\n请再试一次！",
   "traceability": "可追溯性",
   "property_traceability": "财产可追溯性",
   "voucher": "优惠券",
