--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -1095,8 +1095,8 @@
   "active_to_use_wallet": "Activate to use ToBeChain Wallet",
   "active_2_types_wallet": "Activate 2 types of wallets: SavePay, cryptocurrency wallet and enjoy fast, secure payments",
   "congratulate_on_receiving_coin": "Congratulations on receiving TBC coin!",
-  "you_will_automatic_transfer": "You will automatic transfer {'\n'} into booking history screen in {'\n'}",
-  "your_transaction_has_been_canceled": "Your transaction has been canceled due to {'\n'} an error during the booking process.{'\n'}Please try again!",
+  "you_will_automatic_transfer": "You will automatic transfer \n into booking history screen in \n",
+  "your_transaction_has_been_canceled": "Your transaction has been canceled due to \n an error during the booking process.\nPlease try again!",
   "traceability": "Traceability",
   "property_traceability": "Property traceability",
   "voucher": "Voucher",
