--- a/src/languages/id.json
+++ b/src/languages/id.json
@@ -1061,8 +1061,8 @@
   "active_to_use_wallet": "Aktifkan untuk menggunakan Dompet ToBeChain",
   "active_2_types_wallet": "Aktifkan 2 jenis dompet: SavePay, dompet cryptocurrency, dan nikmati pembayaran yang cepat, aman",
   "congratulate_on_receiving_coin": "Selamat menerima koin TBC!",
-  "you_will_automatic_transfer": "Anda akan otomatis dipindahkan {'\n'} ke layar riwayat pemesanan dalam {'\n'}",
-  "your_transaction_has_been_canceled": "Transaksi Anda telah dibatalkan karena {'\n'} kesalahan selama proses pemesanan. {'\n'}Silakan coba lagi!",
+  "you_will_automatic_transfer": "Anda akan otomatis dipindahkan \n ke layar riwayat pemesanan dalam \n",
+  "your_transaction_has_been_canceled": "Transaksi Anda telah dibatalkan karena \n kesalahan selama proses pemesanan. \nSilakan coba lagi!",
   "traceability": "Pelacakan",
   "property_traceability": "Pelacakan properti",
   "voucher": "Voucher",
