--- a/src/languages/my.json
+++ b/src/languages/my.json
@@ -1065,8 +1065,8 @@
   "active_to_use_wallet": "Aktifkan untuk menggunakan Dompet ToBeChain",
   "active_2_types_wallet": "Aktifkan 2 jenis dompet: SavePay, dompet mata wang kripto dan nikmati pembayaran yang cepat, selamat",
   "congratulate_on_receiving_coin": "Tahniah atas penerimaan syiling TBC!",
-  "you_will_automatic_transfer": "Anda akan dipindahkan secara automatik {'\n'} ke skrin sejarah tempahan dalam {'\n'}",
-  "your_transaction_has_been_canceled": "Transaksi anda telah dibatalkan kerana {'\n'} ralat semasa proses tempahan. {'\n'}Sila cuba lagi!",
+  "you_will_automatic_transfer": "Anda akan dipindahkan secara automatik \n ke skrin sejarah tempahan dalam \n",
+  "your_transaction_has_been_canceled": "Transaksi anda telah dibatalkan kerana \n ralat semasa proses tempahan. \nSila cuba lagi!",
   "traceability": "Kebolehkesanan",
   "property_traceability": "Kebolehkesanan hartanah",
   "voucher": "Baucar",
