--- a/src/languages/ph.json
+++ b/src/languages/ph.json
@@ -1083,8 +1083,8 @@
   "active_to_use_wallet": "I-activate upang magamit ang ToBeChain Wallet",
   "active_2_types_wallet": "Aktibo ang 2 uri ng wallet: SavePay, cryptocurrency wallet at mag-enjoy ng mabilis at ligtas na pagbabayad",
   "congratulate_on_receiving_coin": "Binabati kita sa pagtanggap ng TBC coin!",
-  "you_will_automatic_transfer": "Ikaw ay awtomatikong ililipat {'\n'} sa screen ng kasaysayan ng booking sa {'\n'}",
-  "your_transaction_has_been_canceled": "Ang iyong transaksyon ay nakansela dahil sa {'\n'} isang error sa panahon ng proseso ng pag-book. {'\n'}Mangyaring subukan muli!",
+  "you_will_automatic_transfer": "Ikaw ay awtomatikong ililipat \n sa screen ng kasaysayan ng booking sa \n",
+  "your_transaction_has_been_canceled": "Ang iyong transaksyon ay nakansela dahil sa \n isang error sa panahon ng proseso ng pag-book. \nMangyaring subukan muli!",
   "traceability": "Pagsubaybay",
   "property_traceability": "Pagsubaybay ng ari-arian",
   "voucher": "Voucher",
