--- a/src/languages/th.json
+++ b/src/languages/th.json
@@ -1088,8 +1088,8 @@
   "active_to_use_wallet": "เปิดใช้งานเพื่อใช้กระเป๋าสตางค์ ToBeChain",
   "active_2_types_wallet": "เปิดใช้งาน 2 ประเภทของกระเป๋าเงิน: SavePay, กระเป๋าเงินดิจิตอล และเพลิดเพลินกับการชำระเงินที่รวดเร็วและปลอดภัย",
   "congratulate_on_receiving_coin": "ขอแสดงความยินดีที่ได้รับเหรียญ TBC!",
-  "you_will_automatic_transfer": "คุณจะถูกโอนโดยอัตโนมัติ {'\n'} ไปยังหน้าจอประวัติการจองใน {'\n'}",
-  "your_transaction_has_been_canceled": "ธุรกรรมของคุณถูกยกเลิกเนื่องจาก {'\n'} ข้อผิดพลาดระหว่างกระบวนการจอง {'\n'}กรุณาลองอีกครั้ง!",
+  "you_will_automatic_transfer": "คุณจะถูกโอนโดยอัตโนมัติ \n ไปยังหน้าจอประวัติการจองใน \n",
+  "your_transaction_has_been_canceled": "ธุรกรรมของคุณถูกยกเลิกเนื่องจาก \n ข้อผิดพลาดระหว่างกระบวนการจอง \nกรุณาลองอีกครั้ง!",
   "traceability": "การตรวจสอบย้อนกลับ",
   "property_traceability": "การตรวจสอบย้อนกลับทรัพย์สิน",
   "voucher": "บัตรกำนัล",
