--- a/src/languages/vi.json
+++ b/src/languages/vi.json
@@ -1090,8 +1090,8 @@
   "active_to_use_wallet": "Kích hoạt để sử dụng Ví ToBeChain",
   "active_2_types_wallet": "Kích hoạt 2 loại ví: SavePay, ví tiền mã hoá và tận hưởng thanh toán nhanh chóng, an toàn",
   "congratulate_on_receiving_coin": "Chúc mừng bạn đã nhận được TBC coin!",
-  "you_will_automatic_transfer": "Bạn sẽ tự động chuyển {'\n'} vào màn hình lịch sử đặt phòng trong {'\n'}",
-  "your_transaction_has_been_canceled": "Giao dịch của bạn đã bị hủy do {'\n'} lỗi trong quá trình đặt phòng.{'\n'}Vui lòng thử lại!",
+  "you_will_automatic_transfer": "Bạn sẽ tự động chuyển \n vào màn hình lịch sử đặt phòng trong \n",
+  "your_transaction_has_been_canceled": "Giao dịch của bạn đã bị hủy do \n lỗi trong quá trình đặt phòng.\nVui lòng thử lại!",
   "traceability": "Truy xuất nguồn gốc",
   "property_traceability": "Truy xuất nguồn gốc tài sản",
   "voucher": "Phiếu giảm giá",
