--- a/src/languages/th.json
+++ b/src/languages/th.json
@@ -1154,5 +1154,25 @@
   "note_map_distance": "หมายเหตุ: กรุณามาที่ตำแหน่งที่ถูกต้องของที่ดินภายในระยะ 5 เมตร และเลือกตำแหน่งที่ถูกต้องเพื่อโพสต์ (สิ่งนี้จะช่วยระบุทรัพย์สินของคุณในระบบได้ดีขึ้น)",
   "distance": "ระยะทาง",
   "phone_area_code": "รหัสพื้นที่โทรศัพท์",
-  "invalid_phone": "หมายเลขโทรศัพท์ไม่ถูกต้อง"
+  "invalid_phone": "หมายเลขโทรศัพท์ไม่ถูกต้อง",
+
+  "type_payment": "ประเภทการชำระเงิน",
+  "view_review": "ดูรีวิว",
+  "would_you_like_share_short_video": "คุณต้องการแบ่งปันประสบการณ์ของคุณที่โรงแรมนี้ผ่านวิดีโอสั้นหรือไม่? วิดีโอเหล่านี้จะปรากฏในเทรนด์!",
+  "video_caption": "คำบรรยายวิดีโอ",
+  "edit_accommodation": "แก้ไขที่พัก",
+  "post_video_short": "โพสต์วิดีโอสั้น",
+  "check_in_qrscan": "สแกน QR เพื่อเช็คอิน",
+  "share_detail_hotel_short_video": "แบ่งปันรายละเอียดของโรงแรมของคุณผ่านวิดีโอสั้น, วิดีโอเหล่านี้จะปรากฏในเทรนด์!",
+  "share_detail_estate_short_video": "แบ่งปันรายละเอียดของอสังหาริมทรัพย์ของคุณผ่านวิดีโอสั้น, วิดีโอเหล่านี้จะปรากฏในเทรนด์!",
+  "description_video_short": "คำอธิบายวิดีโอสั้น",
+  "click_to_select_video": "คลิกเพื่อเลือกวิดีโอที่ต้องการอัพโหลด",
+  "video_short_review": "รีวิววิดีโอสั้น",
+  "please_give_qrcode_to": "โปรดมอบ QR โค้ดนี้ให้กับเจ้าของโรงแรมเพื่อเช็คอิน",
+  "no_more_room_today": "วันนี้ไม่มีห้องว่าง",
+  "please_repost": "โพสต์นี้หมดอายุแล้ว กรุณาโพสต์ใหม่",
+  "repost": "โพสต์ใหม่",
+  "video_short": "วิดีโอสั้น",
+  "wallet_ready_to_use": "กระเป๋าเงินคริปโตของคุณพร้อมใช้งานแล้ว",
+  "the_remaining_balance_add": "ยอดคงเหลือที่เหลือจะถูกเพิ่มไปยังกระเป๋าเงินจัดการยอดคงเหลือ:"
 }
